--- a/.github/workflows/twitter_bot.yml
+++ b/.github/workflows/twitter_bot.yml
@@ -2,27 +2,28 @@ name: Hourly Twitter Bot
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Uruchamiaj co godzinę (o pełnej godzinie)
-  workflow_dispatch:      # Pozwala na ręczne uruchomienie z panelu Actions
+    # Uruchamiaj co godzinę (o pełnej godzinie, np. 1:00, 2:00, itd.)
+    # Zobacz https://crontab.guru/ dla pomocy z cronem
+    - cron: '0 * * * *'
+  workflow_dispatch: # Pozwala na ręczne uruchomienie z panelu Actions
 
 jobs:
   run-bot:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Użyj najnowszego dostępnego środowiska Ubuntu
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4 # lub @v3
+        uses: actions/checkout@v4 # Zawsze używaj aktualnej wersji akcji
 
       - name: Set up Python
-        uses: actions/setup-python@v4 # lub @v3
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.9' # lub inna preferowana wersja
+          python-version: '3.9' # Możesz wybrać inną wersję Pythona
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tweepy requests 
-          # Jeśli używasz python-dotenv lokalnie, nie jest potrzebny tutaj,
-          # ale nie zaszkodzi, jeśli jest w requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install tweepy requests # Alternatywnie, jeśli nie ma requirements.txt
 
       - name: Run Twitter Bot script
         env: # Przekazanie sekretów jako zmienne środowiskowe do skryptu
@@ -30,4 +31,4 @@ jobs:
           TWITTER_API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-        run: python your_script_name.py # ZMIEŃ na nazwę Twojego pliku .py
+        run: python twitter_bot.py # ZMIEŃ na nazwę Twojego pliku .py
