--- a/.github/workflows/twitter_bot.yml
+++ b/.github/workflows/twitter_bot.yml
@@ -29,6 +29,6 @@ jobs:
         env: # Przekazanie sekretów jako zmienne środowiskowe do skryptu
           TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
           TWITTER_API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
-          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-          TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+          BOT1_ACCESS_TOKEN: ${{ secrets.BOT1_ACCESS_TOKEN }}
+          BOT1_ACCESS_TOKEN_SECRET: ${{ secrets.BOT1_ACCESS_TOKEN_SECRET }}
         run: python twitter_bot.py # ZMIEŃ na nazwę Twojego pliku .py
