--- a/.github/workflows/twitter_bot.yml
+++ b/.github/workflows/twitter_bot.yml
@@ -37,6 +37,6 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
           TWITTER_API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
-          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-          TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+          BOT4_ACCESS_TOKEN: ${{ secrets.BOT4_ACCESS_TOKEN }}
+          BOT4_ACCESS_TOKEN_SECRET: ${{ secrets.BOT4_ACCESS_TOKEN_SECRET }}
         run: python twitter_bot.py
